--- a/index.html
+++ b/index.html
@@ -3,151 +3,151 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>История Любви и Эдварда</title>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+  <title>Викторина для Любови</title>
   <style>
-    body {
-      margin: 0;
-      font-family: 'Nunito', sans-serif;
-      background: linear-gradient(#ffccf9, #fff0f5);
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      overflow-x: hidden;
-      padding: 20px;
-    }
-    #game {
-      background: white;
-      border-radius: 20px;
-      max-width: 500px;
-      width: 100%;
-      padding: 30px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-      animation: fadeIn 1s ease-in-out;
-    }
-    h1, p {
-      text-align: center;
-    }
-    .options {
-      margin-top: 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    button {
-      padding: 10px 15px;
-      border: none;
-      border-radius: 10px;
-      background: #ff69b4;
-      color: white;
-      font-weight: bold;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    button:hover {
-      background: #ff1493;
-    }
-    img.monkey {
-      width: 100px;
-      margin: 10px auto;
-      display: block;
-      animation: swing 1s infinite alternate ease-in-out;
-    }
-    @keyframes swing {
-      from { transform: rotate(-10deg); }
-      to { transform: rotate(10deg); }
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+    body { margin: 0; padding: 0; font-family: Arial, sans-serif; background: linear-gradient(to bottom, #f0f8ff, #e6f7ff); color: #333; }
+    #quiz-container { max-width: 600px; margin: 40px auto; background: #fff; padding: 20px; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
+    h1 { margin-top: 0; font-size: 2rem; }
+    p { font-size: 1.1rem; line-height: 1.5; }
+    .option { display: block; width: 100%; margin: 10px 0; padding: 14px; background: #ffe4b5; border: none; border-radius: 6px; font-size: 1rem; cursor: pointer; transition: background 0.3s; text-align: left; }
+    .option:hover { background: #ffd27f; }
+    button#start-btn, button.reload-btn { margin-top: 20px; padding: 14px 24px; font-size: 1rem; background: #87cefa; border: none; border-radius: 6px; cursor: pointer; transition: background 0.3s; }
+    button#start-btn:hover, button.reload-btn:hover { background: #00bfff; }
+    @media (max-width: 600px) {
+      #quiz-container { margin: 20px; padding: 15px; }
+      h1 { font-size: 1.5rem; }
+      p { font-size: 1rem; }
+      .option, button#start-btn, button.reload-btn { font-size: 0.95rem; padding: 12px; }
     }
   </style>
 </head>
 <body>
-  <div id="game">
-    <img class="monkey" src="https://i.ibb.co/gmnWrX8/monkey.png" alt="Обезьянка">
-    <h1>Ты — Любовь...</h1>
-    <p>Ты начала общение с парнем по имени Эдвард. Он странный. Он пишет без ошибок. Он кидает мемы с обезьянками. Подозрительно.</p>
-    <div class="options" id="options"></div>
+  <div id="quiz-container">
+    <h1>Привет, Любовь! 🐵</h1>
+    <p>Я — Эдвард, и сегодня я поведу тебя через длинную, смешную и слегка мистическую историю с обезьянками, романтикой и... вампирским твистом. Готова погружаться?</p>
+    <button id="start-btn">Начать викторину</button>
   </div>
-  
   <script>
-    const story = [
-      {
-        text: "Он отправил тебе мем с обезьянкой, который явно сам сделал. Что ты ответишь?",
+    const quizData = {
+      start: {
+        text: 'Первый выбор: куда отправимся в начале нашего приключения?',
         options: [
-          "😂 'Это лучший мем, который я видела!'",
-          "🤨 'Хм... у тебя есть работа?'",
-          "🙈 'Я боюсь обезьян...'"
+          { text: 'В дремучие джунгли к обезьянкам 🐒', next: 'jungleEntrance' },
+          { text: 'На уютный ужин при свечах 🕯️', next: 'romanticDinner' },
+          { text: 'На вечернюю экскурсию по городу 🌃', next: 'cityTour' }
         ]
       },
-      {
-        text: "Он предлагает встретиться в кафе 'У Шимпанзе'. Твои действия?",
+      /* Джунгли */
+      jungleEntrance: {
+        text: 'Мы пробираемся сквозь лианы: взволнованные обезьянки щебечут повсюду. Что предложишь в качестве первого подарка питомцам леса?',
         options: [
-          "🐒 'Обезьяны + кофе = идеальное свидание'",
-          "☕ 'Только если без бананового латте'",
-          "🚪 'Спасибо, но я пас'"
+          { text: 'Банан (классика)', next: 'bananaClassics' },
+          { text: 'Кокос (экзотика)', next: 'coconutFun' },
+          { text: 'Шутка (монки любят смех)', next: 'monkeyJoke' }
         ]
       },
-      {
-        text: "В кафе он рассказывает, что изучал философию. И тут он говорит: 'А знаешь, я не совсем обычный... Я вампир.'",
+      bananaClassics: {
+        text: 'Обезьянки радостно перегоняют друг друга за бананом и приглашают нас вглубь джунглей. Вдруг один из них показывает тайную тропу к древнему храму.',
         options: [
-          "🧛‍♀️ 'Класс, покажи клыки!'",
-          "😱 'Я знала! Ты странный!'",
-          "👄 'Так ты хочешь выпить мою кровь?..'"
+          { text: 'Пойти за обезьянкой', next: 'ancientTemple' },
+          { text: 'Остаться у костра', next: 'stayCampfire' }
         ]
       },
-      {
-        text: "Он тянется к твоей шее... но внезапно замирает. Смотрит в твои глаза и... отступает.",
+      coconutFun: {
+        text: 'Ты бьёшь кокос о дерево — жидкость льётся ручьём. Обезьянки устраивают гонки на ветках. Ты:',
         options: [
-          "❤️ 'Ты не можешь меня укусить?'",
-          "💋 'Поцелуй вместо укуса?'",
-          "🥺 'Это было мило... и странно'"
+          { text: 'Присоединяюсь к гонке', next: 'jungleRace' },
+          { text: 'Снимаю видео на телефон', next: 'recordVideo' }
         ]
       },
-      {
-        text: "Он исчезает в ночи. Утром под дверью ты находишь коробку с мягкой игрушкой — обезьянкой. И записку: \"Ты зацепила даже того, у кого нет сердца. — Э.\"",
+      monkeyJoke: {
+        text: 'Ты рассказываешь смешную шутку про бананы и ветки. Обезьянки пищат от смеха и начинают танцевать! Ты:',
         options: [
-          "😊 'Это была самая странная и романтичная история в моей жизни'",
-          "🦇 'Хочу продолжения!'",
-          "😶 'Ну и ну...'"
+          { text: 'Танцую вместе', next: 'jungleDance' },
+          { text: 'Предлагаю перейти к ужину', next: 'romanticDinner' }
         ]
+      },
+      ancientTemple: {
+        text: 'Вы входите в заросший храм. Стены украшены обезьяньими барельефами. В центре зала — чашa с таинственной жидкостью.',
+        options: [
+          { text: 'Попробовать жидкость', next: 'mysticDrink' },
+          { text: 'Игнорировать и искать выход', next: 'findExit' }
+        ]
+      },
+      stayCampfire: { text: 'Мы уютно сидим у костра, обезьянки рассказывают «истории» шорохом в ветках. Но скоро ты заскучаешь...', options: [ { text: 'Вперёд в храм', next: 'ancientTemple' } ] },
+      jungleRace: { text: 'Ты выиграл гонку... обезьянки в восторге! Следующая остановка: храм или пляж?', options: [ { text: 'Храм', next: 'ancientTemple' }, { text: 'Пляж', next: 'jungleBeach' } ] },
+      recordVideo: { text: 'Прикольные кадры! Ты чувствуешь, что это видео войдёт в топ. Но тут обезьянка заскакивает на тебя и тащит вглубь зарослей...', options: [ { text: 'Идти за ней', next: 'ancientTemple' } ] },
+      jungleDance: { text: 'Твой танец с обезьянками стал легендой! Но вечер близится к концу...', options: [ { text: 'На ужин?', next: 'romanticDinner' } ] },
+      jungleBeach: { text: 'Неожиданно вы выходите к экзотическому пляжу. Закат ослепляет. Ты предлагаешь...', options: [ { text: 'Устроить пикник', next: 'beachPicnic' }, { text: 'Плавание в тёплой воде', next: 'beachSwim' } ] },
+      mysticDrink: { text: 'Вкус — сладкий и солоноватый. Ты ощущаешь прилив сил, но немного кружится голова. Что делать?', options: [ { text: 'Исследовать дальше', next: 'deepChamber' }, { text: 'Вернуться к друзьям', next: 'returnFriends' } ] },
+      findExit: { text: 'Ты находишь узкий коридор и выходишь на берег реки с обезьянками. Впереди светятся огни города...', options: [ { text: 'Пойти в город', next: 'cityTour' } ] },
+      deepChamber: { text: 'В глубокой камере ты видишь надписи: "Только тот, кто чист сердцем, узнает секрет моего хозяина".', options: [ { text: 'Читать надписи', next: 'readInscription' } ] },
+      readInscription: { text: 'Надпись гласит: "Тот, кто ценит красоту, отпущен будет". Ты выходишь на свет божий...', options: [ { text: 'Следовать за обезьянкой', next: 'returnFriends' } ] },
+      returnFriends: { text: 'Обезьянки встречают тебя радостным хором, и все вместе вы направляетесь к выходу...', options: [ { text: 'Далее...', next: 'romanticDinner' } ] },
+      beachPicnic: { text: 'Пикник на пляже — просто сказка! Но кто-то шепчет: "У меня есть секрет..."', options: [ { text: 'Что за секрет?', next: 'revealVampire' } ] },
+      beachSwim: { text: 'Плавание при закате сближает. Мы смеёмся, вода блестит. Потом ты промокшая и счастливая садишься рядом и...', options: [ { text: 'Говорить дальше', next: 'revealVampire' } ] },
+
+      /* Ужин */
+      romanticDinner: {
+        text: 'Мы за столом при свечах. Меню: изысканные блюда и музыка на фоне. Я открываю бутылку вина. Ты выберешь:',
+        options: [
+          { text: 'Брусничное вино с трюфелями', next: 'wineTruffles' },
+          { text: 'Шампанское с устрицами', next: 'champagneOysters' },
+          { text: 'Травяной чай с десертом', next: 'herbalTea' }
+        ]
+      },
+      wineTruffles: { text: 'Вино дарит тепло, трюфели — наслаждение. Ты смотришь на меня...', options: [ { text: 'Шепчу комплимент', next: 'complimentEyes' } ] },
+      champagneOysters: { text: 'Шампанское и морские деликатесы — праздник! Я играю на гитаре тихо под столом...', options: [ { text: 'Удивлённо', next: 'guitarSurprise' } ] },
+      herbalTea: { text: 'Чай и десерт — уютно. Мы говорим о мечтах и...', options: [ { text: 'Ты спрашиваешь про меня', next: 'storySelf' } ] },
+      complimentEyes: { text: '"Твои глаза глубже океана..." — и тут я слышу шорох за спиной.', options: [ { text: 'Оборачиваюсь', next: 'revealVampire' } ] },
+      guitarSurprise: { text: 'Между нот гитары я тихо говорю: "У меня есть секрет..."', options: [ { text: 'Что за секрет?', next: 'revealVampire' } ] },
+
+      /* Город */
+      cityTour: {
+        text: 'Ночной город манит огнями. Трамвай, старые улочки, кофе под звёздами. Ты решаешь:',
+        options: [
+          { text: 'Зайти в маленькое кафе', next: 'tinyCafe' },
+          { text: 'Забраться на крышу', next: 'rooftopView' },
+          { text: 'Исследовать старый собор', next: 'oldCathedral' }
+        ]
+      },
+      tinyCafe: { text: 'В кафе играет джаз, бариста улыбается. Мы пьем капучино...', options: [ { text: 'Разговор о детстве', next: 'storySelf' } ] },
+      rooftopView: { text: 'С крыши открывается весь город! Ветрено, но красиво.', options: [ { text: 'Поднёс руку для поддержки', next: 'eyeGaze' } ] },
+      oldCathedral: { text: 'В соборе полумрак и орган звучит тоскливо. Здесь я шепчу: "У меня секрет"', options: [ { text: 'Ты напрягаешься', next: 'revealVampire' } ] },
+      storySelf: { text: 'Я рассказываю о том, как люблю приключения и таинственные истории.', options: [ { text: 'Интересно', next: 'revealVampire' } ] },
+
+      /* Разгадка */
+      revealVampire: {
+        text: '🔮 Момент истины: я вампир, и я хотел высосать твою кровь... но твоя красота остановила меня.',
+        options: [
+          { text: 'Ха-ха, ты шутишь?', next: 'endingLaugh' },
+          { text: 'Это правда?', next: 'endingTrue' },
+          { text: 'Уйду...', next: 'endingReject' }
+        ]
+      },
+      /* Финалы */
+      endingLaugh: { text: 'Ты смеёшься, и наше приключение продолжается в бесконечном веселье! 🎉 Конец первого акта.', options: [], ending: true },
+      endingTrue: { text: 'Я серьёзен: но клянусь — ни капли крови твоей я не трону. Конец... или начало вечности вместе? 🦇', options: [], ending: true },
+      endingReject: { text: 'Ты вздыхаешь и уходишь. Но обезьянки зовут тебя обратно... Конец с подвеской тайны.', options: [], ending: true }
+    };
+
+    const container = document.getElementById('quiz-container');
+    function showNode(key) {
+      const node = quizData[key];
+      container.innerHTML = `<p>${node.text}</p>`;
+      if (node.ending) {
+        container.innerHTML += `<button class="reload-btn" onclick="location.reload()">Начать заново</button>`;
+        return;
       }
-    ];
-
-    let current = 0;
-
-    function showStep(step) {
-      const optionsDiv = document.getElementById("options");
-      document.querySelector("p").innerText = story[step].text;
-      optionsDiv.innerHTML = "";
-
-      story[step].options.forEach(option => {
-        const btn = document.createElement("button");
-        btn.innerText = option;
-        btn.onclick = () => {
-          current++;
-          if (current < story.length) {
-            showStep(current);
-          } else {
-            showEnding(option);
-          }
-        };
-        optionsDiv.appendChild(btn);
+      node.options.forEach(opt => {
+        const btn = document.createElement('button');
+        btn.className = 'option';
+        btn.textContent = opt.text;
+        btn.onclick = () => showNode(opt.next);
+        container.appendChild(btn);
       });
     }
-
-    function showEnding(finalChoice) {
-      document.querySelector("p").innerText = `Твой выбор — ${finalChoice}`;
-      document.querySelector("h1").innerText = "Конец истории ❤️";
-      document.getElementById("options").innerHTML = '<button onclick="location.reload()">Пройти ещё раз</button>';
-    }
-
-    showStep(current);
+    document.getElementById('start-btn').onclick = () => showNode('start');
   </script>
 </body>
 </html>
