--- a/index.html
+++ b/index.html
@@ -3,151 +3,54 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Новогодняя викторина</title>
+<title>Семейная новогодняя викторина</title>
 
 <style>
-:root {
-    --bg: #0b0f1a;
-    --card: #141a2e;
-    --accent: #d4af37;
-    --text: #eaeaf0;
-    --soft: #9aa4c7;
+:root{
+--bg:#0b0f1a;--card:#141a2e;--accent:#d4af37;
+--text:#eaeaf0;--soft:#9aa4c7
 }
-
-* {
-    box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-}
-
-body {
-    margin: 0;
-    min-height: 100vh;
-    background: radial-gradient(circle at top, #1b2350, var(--bg));
-    color: var(--text);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 16px;
-    overflow: hidden;
+*{box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif}
+body{
+margin:0;min-height:100vh;overflow:hidden;
+background:radial-gradient(circle at top,#1b2350,var(--bg));
+color:var(--text);display:flex;justify-content:center;align-items:center;padding:14px
 }
 
 /* СНЕГ */
-.snow {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: 1;
+.snow{position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:1}
+.snow span{
+position:absolute;top:-10px;width:6px;height:6px;border-radius:50%;
+background:rgba(255,255,255,.85);animation:fall linear infinite
 }
-
-.snow span {
-    position: absolute;
-    top: -10px;
-    width: 6px;
-    height: 6px;
-    background: rgba(255,255,255,0.8);
-    border-radius: 50%;
-    animation: fall linear infinite;
-}
-
-@keyframes fall {
-    0% { transform: translateY(0); opacity: 0; }
-    10% { opacity: 1; }
-    100% { transform: translateY(110vh); opacity: 0.2; }
+@keyframes fall{
+0%{transform:translateY(0);opacity:0}
+10%{opacity:1}
+100%{transform:translateY(110vh);opacity:.2}
 }
 
 /* КАРТОЧКА */
-.card {
-    position: relative;
-    z-index: 2;
-    max-width: 520px;
-    width: 100%;
-    background: linear-gradient(180deg, #1a2040, var(--card));
-    border-radius: 18px;
-    padding: 26px;
-    box-shadow: 0 0 40px rgba(0,0,0,0.5);
-    animation: fadeIn 1s ease;
+.card{
+z-index:2;max-width:560px;width:100%;
+background:linear-gradient(180deg,#1a2040,var(--card));
+border-radius:18px;padding:26px;
+box-shadow:0 0 40px rgba(0,0,0,.5)
 }
-
-h1 {
-    text-align: center;
-    font-weight: 600;
-    margin-bottom: 8px;
+h1{text-align:center;margin-bottom:6px}
+.subtitle{text-align:center;color:var(--soft);margin-bottom:22px;font-size:15px}
+.question{font-size:18px;margin-bottom:18px}
+.answers button{
+width:100%;margin-bottom:10px;padding:14px;
+border-radius:12px;border:1px solid #2a335f;
+background:#1c2348;color:var(--text);font-size:15px;
+transition:.25s
 }
-
-.subtitle {
-    text-align: center;
-    color: var(--soft);
-    margin-bottom: 26px;
-    font-size: 15px;
-}
-
-.question {
-    font-size: 18px;
-    margin-bottom: 18px;
-}
-
-.answers button {
-    width: 100%;
-    margin-bottom: 12px;
-    padding: 14px;
-    border-radius: 12px;
-    border: 1px solid #2a335f;
-    background: #1c2348;
-    color: var(--text);
-    font-size: 16px;
-    cursor: pointer;
-    transition: 0.25s;
-}
-
-.answers button:active {
-    transform: scale(0.98);
-}
-
-.answers button:hover {
-    background: #252e66;
-}
-
-.progress {
-    margin-top: 16px;
-    font-size: 13px;
-    color: var(--soft);
-    text-align: right;
-}
-
-.final {
-    text-align: center;
-    line-height: 1.6;
-    animation: fadeIn 1.2s ease;
-}
-
-.final h2 {
-    color: var(--accent);
-    margin-bottom: 20px;
-}
-
-.signature {
-    margin-top: 28px;
-    font-style: italic;
-    color: var(--soft);
-}
-
-@keyframes fadeIn {
-    from { opacity: 0; transform: translateY(10px); }
-    to { opacity: 1; transform: translateY(0); }
-}
-
-/* МОБИЛЬНАЯ АДАПТАЦИЯ */
-@media (max-width: 480px) {
-    .card {
-        padding: 22px;
-    }
-    .question {
-        font-size: 17px;
-    }
-}
+.answers button:hover{background:#252e66}
+.answers button:active{transform:scale(.97)}
+.progress{font-size:13px;color:var(--soft);text-align:right;margin-top:10px}
+.final{text-align:center;line-height:1.6}
+.final h2{color:var(--accent);margin-bottom:18px}
+.signature{margin-top:26px;font-style:italic;color:var(--soft)}
 </style>
 </head>
 
@@ -156,87 +59,115 @@ h1 {
 <div class="snow" id="snow"></div>
 
 <div class="card">
-    <h1>Небольшая викторина</h1>
-    <div class="subtitle">Несколько вопросов — и тёплое завершение</div>
-    <div id="content"></div>
+<h1>Семейная викторина</h1>
+<div class="subtitle">Немного юмора, немного смысла и Новый год</div>
+<div id="content"></div>
 </div>
 
 <script>
-/* СНЕГ */
-const snowContainer = document.getElementById("snow");
-const snowCount = 40;
-
-for (let i = 0; i < snowCount; i++) {
-    const flake = document.createElement("span");
-    flake.style.left = Math.random() * 100 + "vw";
-    flake.style.animationDuration = 5 + Math.random() * 7 + "s";
-    flake.style.opacity = Math.random();
-    flake.style.transform = `scale(${0.5 + Math.random()})`;
-    snowContainer.appendChild(flake);
+// СНЕГ
+const snow=document.getElementById("snow");
+for(let i=0;i<45;i++){
+const s=document.createElement("span");
+s.style.left=Math.random()*100+"vw";
+s.style.animationDuration=5+Math.random()*7+"s";
+s.style.transform=`scale(${.5+Math.random()})`;
+snow.appendChild(s)
 }
 
-/* ВИКТОРИНА */
-const questions = [
-    {
-        q: "Что для тебя важнее в новом году?",
-        a: ["Внутреннее спокойствие", "Рост и движение", "Люди рядом"]
-    },
-    {
-        q: "Какое состояние хочется чувствовать чаще?",
-        a: ["Уверенность", "Интерес к жизни", "Тихую радость"]
-    },
-    {
-        q: "Что для тебя действительно ценно?",
-        a: ["Честность", "Смысл", "Настоящие моменты"]
-    }
+// СЧЁТЧИК ТИПОВ
+let score={phil:0,fun:0,home:0,real:0,fam:0};
+
+const questions=[
+["Что для тебя Новый год?",
+["Возможность подумать о жизни","Повод посмеяться","Главное — чтобы все были дома","Отдохнуть без лишнего пафоса"],["phil","fun","fam","real"]],
+["Идеальный вечер 31 декабря?",
+["Разговоры до ночи","Шутки и тосты","Еда и уют","Чтобы всё по плану"],["phil","fun","home","real"]],
+["Что важнее?",
+["Смысл","Смех","Тепло","Практичность"],["phil","fun","fam","real"]],
+["Если салат закончился?",
+["Философски приму","Пошучу","Найду ещё","Так и планировал"],["phil","fun","home","real"]],
+["В семье ты кто?",
+["Мыслитель","Юморной","Хранитель уюта","Рациональный"],["phil","fun","fam","real"]],
+["Как относишься к тостам?",
+["Если со смыслом","Чем смешнее — тем лучше","Главное искренность","Коротко и по делу"],["phil","fun","fam","real"]],
+["Лучший подарок?",
+["Слова","Эмоции","Забота","Полезная вещь"],["phil","fun","fam","real"]],
+["Что бесит больше?",
+["Пустые разговоры","Отсутствие юмора","Холод в доме","Хаос"],["phil","fun","home","real"]],
+["Новый год должен быть…",
+["Осмысленным","Весёлым","Семейным","Спокойным"],["phil","fun","fam","real"]],
+["Кто ты за столом?",
+["Наблюдатель","Шутник","Заботливый","Контролёр"],["phil","fun","fam","real"]],
+["Что скажешь про Мариуполь?",
+["Город с характером","Город мемов","Наш дом","Город реальности"],["phil","fun","fam","real"]],
+["Если что-то пошло не так?",
+["Приму","Обсмею","Поддержу","Исправлю"],["phil","fun","fam","real"]],
+["Что важнее в людях?",
+["Глубина","Чувство юмора","Доброта","Надёжность"],["phil","fun","fam","real"]],
+["Твой стиль общения?",
+["Спокойный","Остроумный","Тёплый","Прямой"],["phil","fun","fam","real"]],
+["Что делает праздник?",
+["Атмосфера","Смех","Люди","Организация"],["phil","fun","fam","real"]],
+["Если гости задержались?",
+["Значит, так надо","Отлично!","Пусть остаются","Нужно планировать"],["phil","fun","fam","real"]],
+["Что ценишь в семье?",
+["Понимание","Лёгкость","Поддержку","Стабильность"],["phil","fun","fam","real"]],
+["Кто ты в конфликте?",
+["Молчу","Разряжаю","Примиряю","Решаю"],["phil","fun","fam","real"]],
+["Новый год — это…",
+["Переосмысление","Шанс пошутить","Быть вместе","Перезагрузка"],["phil","fun","fam","real"]],
+["Фраза про тебя?",
+["Думаю глубоко","Люблю посмеяться","Семья — главное","Без лишнего"],["phil","fun","fam","real"]]
 ];
 
-let step = 0;
-const content = document.getElementById("content");
+let step=0;
+const content=document.getElementById("content");
 
-function renderQuestion() {
-    const q = questions[step];
-    content.innerHTML = `
-        <div class="question">${q.q}</div>
-        <div class="answers">
-            ${q.a.map(ans => `<button onclick="next()">${ans}</button>`).join("")}
-        </div>
-        <div class="progress">${step + 1} / ${questions.length}</div>
-    `;
+function render(){
+const q=questions[step];
+content.innerHTML=`
+<div class="question">${q[0]}</div>
+<div class="answers">
+${q[1].map((a,i)=>`<button onclick="answer('${q[2][i]}')">${a}</button>`).join("")}
+</div>
+<div class="progress">${step+1} / ${questions.length}</div>`
 }
 
-function next() {
-    step++;
-    if (step < questions.length) {
-        renderQuestion();
-    } else {
-        renderFinal();
-    }
+function answer(type){
+score[type]++;
+step++;
+if(step<questions.length) render();
+else finish();
 }
 
-function renderFinal() {
-    content.innerHTML = `
-        <div class="final">
-            <h2>С наступающим Новым годом</h2>
-            <p>
-                Пусть следующий год будет спокойнее внутри  
-                и точнее в решениях.
-            </p>
-            <p>
-                Пусть будет меньше шума  
-                и больше настоящих моментов.
-            </p>
-            <p>
-                Желаю сил без надрыва,  
-                движения без спешки  
-                и радости, которая остаётся.
-            </p>
-            <div class="signature">— Эдвард</div>
-        </div>
-    `;
+function finish(){
+const top=Object.entries(score).sort((a,b)=>b[1]-a[1])[0][0];
+let text="";
+if(top==="fun") text=`Ты — человек юмора. Без тебя за столом было бы тише и скучнее.
+Даже Давид иногда улыбается чуть шире, а Марьяна точно ценит твои шутки.`;
+if(top==="phil") text=`Ты — философ. Ты видишь глубже, чем просто праздник.
+Даже Лилит иногда задумывается после твоих слов.`;
+if(top==="home") text=`Ты — хранитель уюта. Благодаря таким людям
+бабушка Лаура чувствует тепло, а в доме спокойно.`;
+if(top==="real") text=`Ты — практичный человек. Когда всё держится —
+это часто благодаря тебе. Даже Овик это знает.`;
+if(top==="fam") text=`Ты — сердце семьи. Когда все вместе в Мариуполе —
+это во многом благодаря таким, как ты.`;
+
+content.innerHTML=`
+<div class="final">
+<h2>С наступающим Новым годом</h2>
+<p>${text}</p>
+<p>
+Пусть этот год будет тёплым, живым и настоящим.
+Пусть в доме будет смех, еда, разговоры и ощущение «мы».
+</p>
+<div class="signature">— Эдвард</div>
+</div>`
 }
 
-renderQuestion();
+render();
 </script>
 
 </body>
