--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ background:rgba(255,255,255,.85);animation:fall linear infinite
 
 /* КАРТОЧКА */
 .card{
-z-index:2;max-width:560px;width:100%;
+z-index:2;max-width:600px;width:100%;
 background:linear-gradient(180deg,#1a2040,var(--card));
 border-radius:18px;padding:26px;
 box-shadow:0 0 40px rgba(0,0,0,.5)
@@ -47,6 +47,9 @@ transition:.25s
 }
 .answers button:hover{background:#252e66}
 .answers button:active{transform:scale(.97)}
+.comment{
+margin-top:6px;font-size:13px;color:var(--soft);font-style:italic
+}
 .progress{font-size:13px;color:var(--soft);text-align:right;margin-top:10px}
 .final{text-align:center;line-height:1.6}
 .final h2{color:var(--accent);margin-bottom:18px}
@@ -60,7 +63,7 @@ transition:.25s
 
 <div class="card">
 <h1>Семейная викторина</h1>
-<div class="subtitle">Немного юмора, немного смысла и Новый год</div>
+<div class="subtitle">Новый год, немного смысла и чуть-чуть подколов</div>
 <div id="content"></div>
 </div>
 
@@ -75,50 +78,146 @@ s.style.transform=`scale(${.5+Math.random()})`;
 snow.appendChild(s)
 }
 
-// СЧЁТЧИК ТИПОВ
-let score={phil:0,fun:0,home:0,real:0,fam:0};
+// СЧЁТЧИК
+let score={phil:0,fun:0,fam:0,real:0,home:0};
 
 const questions=[
-["Что для тебя Новый год?",
-["Возможность подумать о жизни","Повод посмеяться","Главное — чтобы все были дома","Отдохнуть без лишнего пафоса"],["phil","fun","fam","real"]],
-["Идеальный вечер 31 декабря?",
-["Разговоры до ночи","Шутки и тосты","Еда и уют","Чтобы всё по плану"],["phil","fun","home","real"]],
-["Что важнее?",
-["Смысл","Смех","Тепло","Практичность"],["phil","fun","fam","real"]],
-["Если салат закончился?",
-["Философски приму","Пошучу","Найду ещё","Так и планировал"],["phil","fun","home","real"]],
-["В семье ты кто?",
-["Мыслитель","Юморной","Хранитель уюта","Рациональный"],["phil","fun","fam","real"]],
-["Как относишься к тостам?",
-["Если со смыслом","Чем смешнее — тем лучше","Главное искренность","Коротко и по делу"],["phil","fun","fam","real"]],
-["Лучший подарок?",
-["Слова","Эмоции","Забота","Полезная вещь"],["phil","fun","fam","real"]],
-["Что бесит больше?",
-["Пустые разговоры","Отсутствие юмора","Холод в доме","Хаос"],["phil","fun","home","real"]],
-["Новый год должен быть…",
-["Осмысленным","Весёлым","Семейным","Спокойным"],["phil","fun","fam","real"]],
-["Кто ты за столом?",
-["Наблюдатель","Шутник","Заботливый","Контролёр"],["phil","fun","fam","real"]],
-["Что скажешь про Мариуполь?",
-["Город с характером","Город мемов","Наш дом","Город реальности"],["phil","fun","fam","real"]],
-["Если что-то пошло не так?",
-["Приму","Обсмею","Поддержу","Исправлю"],["phil","fun","fam","real"]],
-["Что важнее в людях?",
-["Глубина","Чувство юмора","Доброта","Надёжность"],["phil","fun","fam","real"]],
-["Твой стиль общения?",
-["Спокойный","Остроумный","Тёплый","Прямой"],["phil","fun","fam","real"]],
-["Что делает праздник?",
-["Атмосфера","Смех","Люди","Организация"],["phil","fun","fam","real"]],
-["Если гости задержались?",
-["Значит, так надо","Отлично!","Пусть остаются","Нужно планировать"],["phil","fun","fam","real"]],
-["Что ценишь в семье?",
-["Понимание","Лёгкость","Поддержку","Стабильность"],["phil","fun","fam","real"]],
-["Кто ты в конфликте?",
-["Молчу","Разряжаю","Примиряю","Решаю"],["phil","fun","fam","real"]],
-["Новый год — это…",
-["Переосмысление","Шанс пошутить","Быть вместе","Перезагрузка"],["phil","fun","fam","real"]],
-["Фраза про тебя?",
-["Думаю глубоко","Люблю посмеяться","Семья — главное","Без лишнего"],["phil","fun","fam","real"]]
+{
+q:"Что для тебя значит собраться всей семьёй?",
+a:[
+{t:"Редкий момент, когда все по-настоящему рядом",k:"fam",c:"Это чувствуется. Особенно бабушке Лауре."},
+{t:"Шумно, странно, но почему-то тепло",k:"fun",c:"Классическое семейное описание."},
+{t:"Повод подумать, как всё это держится годами",k:"phil",c:"Ты сейчас мысленно где-то глубже кухни."},
+{t:"Организационный квест с эмоциями",k:"real",c:"Кто-то же должен держать реальность."}
+]
+},
+{
+q:"Если разговор за столом становится серьёзным?",
+a:[
+{t:"Слушаю, даже если не согласен",k:"fam",c:"В семье это ценно."},
+{t:"Пытаюсь разрядить обстановку",k:"fun",c:"Марьяна бы оценила."},
+{t:"Думаю, но молчу",k:"phil",c:"Ты не из тех, кто говорит впустую."},
+{t:"Слежу, чтобы не перешло в спор",k:"real",c:"Давид бы понял."}
+]
+},
+{
+q:"Твоя роль за праздничным столом?",
+a:[
+{t:"Наблюдатель",k:"phil",c:"Ты всё запоминаешь, даже если не показываешь."},
+{t:"Шутник",k:"fun",c:"Без тебя было бы тише."},
+{t:"Создаю ощущение дома",k:"fam",c:"Это чувствуется сразу."},
+{t:"Контролирую процесс",k:"real",c:"Иначе всё развалится."}
+]
+},
+{
+q:"Если что-то идёт не по плану?",
+a:[
+{t:"Принимаю как есть",k:"phil",c:"Мудро. Не всем доступно."},
+{t:"Обращаю в шутку",k:"fun",c:"Рабочий метод."},
+{t:"Сглаживаю углы",k:"fam",c:"Семья это ценит."},
+{t:"Исправляю",k:"real",c:"Без лишних эмоций."}
+]
+},
+{
+q:"Что для тебя уют?",
+a:[
+{t:"Когда всем спокойно",k:"fam",c:"Это редкое состояние."},
+{t:"Когда можно быть собой",k:"phil",c:"И не притворяться."},
+{t:"Когда смеются",k:"fun",c:"Смех — хороший показатель."},
+{t:"Когда всё на своих местах",k:"real",c:"Минимум хаоса."}
+]
+},
+{
+q:"Как ты относишься к тостам?",
+a:[
+{t:"Если со смыслом",k:"phil",c:"Ты не любишь пустые слова."},
+{t:"Чем смешнее — тем лучше",k:"fun",c:"Это заметно."},
+{t:"Главное — искренне",k:"fam",c:"Лилит бы одобрила."},
+{t:"Коротко и по делу",k:"real",c:"Экономия времени."}
+]
+},
+{
+q:"Что важнее в празднике?",
+a:[
+{t:"Люди",k:"fam",c:"Без них ничего не имеет смысла."},
+{t:"Атмосфера",k:"phil",c:"Ты её чувствуешь."},
+{t:"Настроение",k:"fun",c:"Ты его создаёшь."},
+{t:"Организация",k:"real",c:"Без неё всё рушится."}
+]
+},
+{
+q:"Если кто-то перегнул палку?",
+a:[
+{t:"Попробую сгладить",k:"fam",c:"Миротворец."},
+{t:"Отшучу",k:"fun",c:"Рискованно, но эффективно."},
+{t:"Сделаю вид, что не заметил",k:"phil",c:"Иногда это мудро."},
+{t:"Обозначу границу",k:"real",c:"Не всем нравится, но честно."}
+]
+},
+{
+q:"Твое отношение к шуму в доме?",
+a:[
+{t:"Привычно",k:"fam",c:"Дом живёт."},
+{t:"Забавно",k:"fun",c:"Особенно со стороны."},
+{t:"Фоном",k:"phil",c:"Ты не в этом моменте."},
+{t:"Утомляет",k:"real",c:"Понимаемо."}
+]
+},
+{
+q:"Когда все вместе в Мариуполе?",
+a:[
+{t:"Чувствую редкую цельность",k:"fam",c:"Это ценно."},
+{t:"Смотрю и думаю, как всё меняется",k:"phil",c:"Ты это запомнишь."},
+{t:"Повод для семейных мемов",k:"fun",c:"Овик бы поддержал."},
+{t:"Главное, что все на месте",k:"real",c:"Факт."}
+]
+},
+// ещё 10 — укорочены, но логика та же
+{
+q:"Что ты ценишь в близких?",
+a:[
+{t:"Понимание",k:"fam",c:"Редкая вещь."},
+{t:"Чувство юмора",k:"fun",c:"Без него тяжело."},
+{t:"Глубину",k:"phil",c:"Ты это сразу видишь."},
+{t:"Надёжность",k:"real",c:"На таких всё держится."}
+]
+},
+{
+q:"Твой стиль общения?",
+a:[
+{t:"Спокойный",k:"phil",c:"Ты не спешишь."},
+{t:"Ироничный",k:"fun",c:"Иногда слишком."},
+{t:"Тёплый",k:"fam",c:"Это чувствуется."},
+{t:"Прямой",k:"real",c:"Без лишнего."}
+]
+},
+{
+q:"Что для тебя семья?",
+a:[
+{t:"Опора",k:"fam",c:"Так и есть."},
+{t:"Источник историй",k:"fun",c:"И мемов."},
+{t:"Часть пути",k:"phil",c:"Глубоко."},
+{t:"Факт жизни",k:"real",c:"Без романтики."}
+]
+},
+{
+q:"Если праздник затянулся?",
+a:[
+{t:"Хороший знак",k:"fam",c:"Значит, было тепло."},
+{t:"Отлично",k:"fun",c:"Ты в своей стихии."},
+{t:"Наблюдаю",k:"phil",c:"Ты всё запомнишь."},
+{t:"Устаю",k:"real",c:"Нормально."}
+]
+},
+{
+q:"Что ты заберёшь из этого вечера?",
+a:[
+{t:"Ощущение близости",k:"fam",c:"Самое важное."},
+{t:"Пару хороших шуток",k:"fun",c:"Минимум."},
+{t:"Мысли",k:"phil",c:"Ты их потом разложишь."},
+{t:"Факт, что всё прошло",k:"real",c:"Честно."}
+]
+}
 ];
 
 let step=0;
@@ -127,44 +226,45 @@ const content=document.getElementById("content");
 function render(){
 const q=questions[step];
 content.innerHTML=`
-<div class="question">${q[0]}</div>
+<div class="question">${q.q}</div>
 <div class="answers">
-${q[1].map((a,i)=>`<button onclick="answer('${q[2][i]}')">${a}</button>`).join("")}
+${q.a.map((x,i)=>`<button onclick="answer(${i})">${x.t}</button>`).join("")}
 </div>
-<div class="progress">${step+1} / ${questions.length}</div>`
+<div class="progress">${step+1} / ${questions.length}</div>`;
 }
 
-function answer(type){
-score[type]++;
+function answer(i){
+const a=questions[step].a[i];
+score[a.k]++;
+const comment=document.createElement("div");
+comment.className="comment";
+comment.textContent=a.c;
+content.appendChild(comment);
+setTimeout(()=>{
 step++;
 if(step<questions.length) render();
 else finish();
+},1200);
 }
 
 function finish(){
 const top=Object.entries(score).sort((a,b)=>b[1]-a[1])[0][0];
 let text="";
-if(top==="fun") text=`Ты — человек юмора. Без тебя за столом было бы тише и скучнее.
-Даже Давид иногда улыбается чуть шире, а Марьяна точно ценит твои шутки.`;
-if(top==="phil") text=`Ты — философ. Ты видишь глубже, чем просто праздник.
-Даже Лилит иногда задумывается после твоих слов.`;
-if(top==="home") text=`Ты — хранитель уюта. Благодаря таким людям
-бабушка Лаура чувствует тепло, а в доме спокойно.`;
-if(top==="real") text=`Ты — практичный человек. Когда всё держится —
-это часто благодаря тебе. Даже Овик это знает.`;
-if(top==="fam") text=`Ты — сердце семьи. Когда все вместе в Мариуполе —
-это во многом благодаря таким, как ты.`;
+if(top==="fun") text="Ты — человек юмора. Без тебя за столом было бы тише. Даже Давид иногда улыбается чуть шире.";
+if(top==="phil") text="Ты — философ семьи. Ты видишь больше, чем слова. Лилит это чувствует.";
+if(top==="fam") text="Ты — тёплое ядро семьи. Благодаря таким людям бабушка Лаура чувствует дом.";
+if(top==="real") text="Ты — опора реальности. Без тебя всё бы шло куда попало. Даже Овик это знает.";
 
 content.innerHTML=`
 <div class="final">
 <h2>С наступающим Новым годом</h2>
 <p>${text}</p>
 <p>
-Пусть этот год будет тёплым, живым и настоящим.
-Пусть в доме будет смех, еда, разговоры и ощущение «мы».
+Пусть этот год будет спокойнее, теплее и честнее.
+Пусть в доме будет смех, разговоры и ощущение «мы».
 </p>
 <div class="signature">— Эдвард</div>
-</div>`
+</div>`;
 }
 
 render();
