--- a/index.html
+++ b/index.html
@@ -3,25 +3,50 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Семейная новогодняя викторина</title>
+<title>Новогодняя семейная викторина</title>
 
 <style>
 :root{
---bg:#0b0f1a;--card:#141a2e;--accent:#d4af37;
---text:#eaeaf0;--soft:#9aa4c7
+--bg:#0b0f1a;
+--card:#141a2e;
+--accent:#d4af37;
+--text:#eaeaf0;
+--soft:#9aa4c7;
+--glow:rgba(212,175,55,.35);
 }
-*{box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif}
+
+*{
+box-sizing:border-box;
+font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;
+}
+
 body{
-margin:0;min-height:100vh;overflow:hidden;
+margin:0;
+min-height:100vh;
+overflow:hidden;
 background:radial-gradient(circle at top,#1b2350,var(--bg));
-color:var(--text);display:flex;justify-content:center;align-items:center;padding:14px
+color:var(--text);
+display:flex;
+justify-content:center;
+align-items:center;
+padding:14px;
 }
 
 /* СНЕГ */
-.snow{position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:1}
+.snow{
+position:fixed;
+inset:0;
+pointer-events:none;
+z-index:1;
+}
 .snow span{
-position:absolute;top:-10px;width:6px;height:6px;border-radius:50%;
-background:rgba(255,255,255,.85);animation:fall linear infinite
+position:absolute;
+top:-10px;
+width:6px;
+height:6px;
+border-radius:50%;
+background:rgba(255,255,255,.85);
+animation:fall linear infinite;
 }
 @keyframes fall{
 0%{transform:translateY(0);opacity:0}
@@ -31,29 +56,109 @@ background:rgba(255,255,255,.85);animation:fall linear infinite
 
 /* КАРТОЧКА */
 .card{
-z-index:2;max-width:600px;width:100%;
+z-index:2;
+max-width:620px;
+width:100%;
 background:linear-gradient(180deg,#1a2040,var(--card));
-border-radius:18px;padding:26px;
-box-shadow:0 0 40px rgba(0,0,0,.5)
+border-radius:18px;
+padding:28px;
+box-shadow:0 0 40px rgba(0,0,0,.55);
+transition:transform .4s, box-shadow .4s;
 }
-h1{text-align:center;margin-bottom:6px}
-.subtitle{text-align:center;color:var(--soft);margin-bottom:22px;font-size:15px}
-.question{font-size:18px;margin-bottom:18px}
+
+.card.glow{
+box-shadow:0 0 55px var(--glow);
+}
+
+h1{
+text-align:center;
+margin-bottom:6px;
+font-weight:600;
+}
+
+.subtitle{
+text-align:center;
+color:var(--soft);
+margin-bottom:22px;
+font-size:15px;
+}
+
+.question{
+font-size:18px;
+margin-bottom:20px;
+animation:fadeInUp .5s ease;
+}
+
 .answers button{
-width:100%;margin-bottom:10px;padding:14px;
-border-radius:12px;border:1px solid #2a335f;
-background:#1c2348;color:var(--text);font-size:15px;
-transition:.25s
+width:100%;
+margin-bottom:12px;
+padding:14px 16px;
+border-radius:12px;
+border:1px solid #2a335f;
+background:#1c2348;
+color:var(--text);
+font-size:15px;
+cursor:pointer;
+transition:.25s;
 }
-.answers button:hover{background:#252e66}
-.answers button:active{transform:scale(.97)}
+
+.answers button:hover{
+background:#252e66;
+}
+
+.answers button:active{
+transform:scale(.97);
+}
+
 .comment{
-margin-top:6px;font-size:13px;color:var(--soft);font-style:italic
+margin-top:10px;
+font-size:13px;
+color:var(--soft);
+font-style:italic;
+opacity:0;
+animation:fadeIn .6s forwards;
 }
-.progress{font-size:13px;color:var(--soft);text-align:right;margin-top:10px}
-.final{text-align:center;line-height:1.6}
-.final h2{color:var(--accent);margin-bottom:18px}
-.signature{margin-top:26px;font-style:italic;color:var(--soft)}
+
+.progress{
+font-size:13px;
+color:var(--soft);
+text-align:right;
+margin-top:12px;
+}
+
+.final{
+text-align:center;
+line-height:1.65;
+animation:fadeInUp .8s ease;
+}
+
+.final h2{
+color:var(--accent);
+margin-bottom:18px;
+}
+
+.signature{
+margin-top:26px;
+font-style:italic;
+color:var(--soft);
+}
+
+/* АНИМАЦИИ */
+@keyframes fadeIn{
+from{opacity:0}
+to{opacity:1}
+}
+@keyframes fadeInUp{
+from{opacity:0;transform:translateY(12px)}
+to{opacity:1;transform:translateY(0)}
+}
+@keyframes shake{
+0%{transform:translateX(0)}
+25%{transform:translateX(-3px)}
+50%{transform:translateX(3px)}
+75%{transform:translateX(-2px)}
+100%{transform:translateX(0)}
+}
 </style>
 </head>
 
@@ -61,167 +166,78 @@ margin-top:6px;font-size:13px;color:var(--soft);font-style:italic
 
 <div class="snow" id="snow"></div>
 
-<div class="card">
+<div class="card" id="card">
 <h1>Семейная викторина</h1>
-<div class="subtitle">Новый год, немного смысла и чуть-чуть подколов</div>
+<div class="subtitle">Новый год. Свои люди. Немного иронии.</div>
 <div id="content"></div>
 </div>
 
 <script>
 // СНЕГ
 const snow=document.getElementById("snow");
-for(let i=0;i<45;i++){
+for(let i=0;i<42;i++){
 const s=document.createElement("span");
 s.style.left=Math.random()*100+"vw";
-s.style.animationDuration=5+Math.random()*7+"s";
+s.style.animationDuration=6+Math.random()*8+"s";
 s.style.transform=`scale(${.5+Math.random()})`;
-snow.appendChild(s)
+snow.appendChild(s);
 }
 
-// СЧЁТЧИК
-let score={phil:0,fun:0,fam:0,real:0,home:0};
+// СЧЁТ
+let score={phil:0,fun:0,fam:0,real:0};
 
 const questions=[
 {
-q:"Что для тебя значит собраться всей семьёй?",
+q:"Когда вся семья собирается вместе, ты в первую очередь…",
 a:[
-{t:"Редкий момент, когда все по-настоящему рядом",k:"fam",c:"Это чувствуется. Особенно бабушке Лауре."},
-{t:"Шумно, странно, но почему-то тепло",k:"fun",c:"Классическое семейное описание."},
-{t:"Повод подумать, как всё это держится годами",k:"phil",c:"Ты сейчас мысленно где-то глубже кухни."},
-{t:"Организационный квест с эмоциями",k:"real",c:"Кто-то же должен держать реальность."}
+{t:"Замечаешь, как каждый изменился",k:"phil",c:"Ты всегда смотришь чуть глубже момента."},
+{t:"Отмечаешь абсурд ситуации",k:"fun",c:"Юмор — твой способ адаптации."},
+{t:"Радуешься, что все рядом",k:"fam",c:"Это читается без слов."},
+{t:"Думаешь, как всё организовано",k:"real",c:"Кто-то же должен."}
 ]
 },
 {
-q:"Если разговор за столом становится серьёзным?",
+q:"Если за столом повисает пауза?",
 a:[
-{t:"Слушаю, даже если не согласен",k:"fam",c:"В семье это ценно."},
-{t:"Пытаюсь разрядить обстановку",k:"fun",c:"Марьяна бы оценила."},
-{t:"Думаю, но молчу",k:"phil",c:"Ты не из тех, кто говорит впустую."},
-{t:"Слежу, чтобы не перешло в спор",k:"real",c:"Давид бы понял."}
+{t:"Мне в ней комфортно",k:"phil",c:"Тишина тебя не пугает."},
+{t:"Заполняю её шуткой",k:"fun",c:"Иногда это спасает вечер."},
+{t:"Смотрю, кому нужно внимание",k:"fam",c:"Ты чувствуешь людей."},
+{t:"Перехожу к следующей теме",k:"real",c:"Прагматично."}
 ]
 },
 {
-q:"Твоя роль за праздничным столом?",
+q:"Твоё отношение к семейным разговорам?",
 a:[
-{t:"Наблюдатель",k:"phil",c:"Ты всё запоминаешь, даже если не показываешь."},
-{t:"Шутник",k:"fun",c:"Без тебя было бы тише."},
-{t:"Создаю ощущение дома",k:"fam",c:"Это чувствуется сразу."},
-{t:"Контролирую процесс",k:"real",c:"Иначе всё развалится."}
+{t:"В них всегда больше, чем кажется",k:"phil",c:"Ты это улавливаешь."},
+{t:"Лучшие мемы рождаются тут",k:"fun",c:"И ты это знаешь."},
+{t:"Это то, что держит вместе",k:"fam",c:"Фундамент."},
+{t:"Иногда утомляют",k:"real",c:"Честно."}
 ]
 },
 {
-q:"Если что-то идёт не по плану?",
+q:"Если кто-то слегка перегнул?",
 a:[
-{t:"Принимаю как есть",k:"phil",c:"Мудро. Не всем доступно."},
-{t:"Обращаю в шутку",k:"fun",c:"Рабочий метод."},
-{t:"Сглаживаю углы",k:"fam",c:"Семья это ценит."},
-{t:"Исправляю",k:"real",c:"Без лишних эмоций."}
+{t:"Сделаю вид, что не заметил",k:"phil",c:"Иногда это мудрее реакции."},
+{t:"Сведу всё в иронию",k:"fun",c:"Опасно, но эффективно."},
+{t:"Попробую сгладить",k:"fam",c:"Миротворец внутри тебя жив."},
+{t:"Чётко обозначу границу",k:"real",c:"Без лишних эмоций."}
 ]
 },
 {
-q:"Что для тебя уют?",
+q:"Что для тебя по-настоящему ценно в таких вечерах?",
 a:[
-{t:"Когда всем спокойно",k:"fam",c:"Это редкое состояние."},
-{t:"Когда можно быть собой",k:"phil",c:"И не притворяться."},
-{t:"Когда смеются",k:"fun",c:"Смех — хороший показатель."},
-{t:"Когда всё на своих местах",k:"real",c:"Минимум хаоса."}
+{t:"Наблюдать, а не говорить",k:"phil",c:"Ты многое запоминаешь."},
+{t:"Смех без причины",k:"fun",c:"Он самый честный."},
+{t:"Ощущение «мы»",k:"fam",c:"Редкая вещь."},
+{t:"Факт, что всё проходит спокойно",k:"real",c:"Это тоже ценность."}
 ]
 },
-{
-q:"Как ты относишься к тостам?",
-a:[
-{t:"Если со смыслом",k:"phil",c:"Ты не любишь пустые слова."},
-{t:"Чем смешнее — тем лучше",k:"fun",c:"Это заметно."},
-{t:"Главное — искренне",k:"fam",c:"Лилит бы одобрила."},
-{t:"Коротко и по делу",k:"real",c:"Экономия времени."}
-]
-},
-{
-q:"Что важнее в празднике?",
-a:[
-{t:"Люди",k:"fam",c:"Без них ничего не имеет смысла."},
-{t:"Атмосфера",k:"phil",c:"Ты её чувствуешь."},
-{t:"Настроение",k:"fun",c:"Ты его создаёшь."},
-{t:"Организация",k:"real",c:"Без неё всё рушится."}
-]
-},
-{
-q:"Если кто-то перегнул палку?",
-a:[
-{t:"Попробую сгладить",k:"fam",c:"Миротворец."},
-{t:"Отшучу",k:"fun",c:"Рискованно, но эффективно."},
-{t:"Сделаю вид, что не заметил",k:"phil",c:"Иногда это мудро."},
-{t:"Обозначу границу",k:"real",c:"Не всем нравится, но честно."}
-]
-},
-{
-q:"Твое отношение к шуму в доме?",
-a:[
-{t:"Привычно",k:"fam",c:"Дом живёт."},
-{t:"Забавно",k:"fun",c:"Особенно со стороны."},
-{t:"Фоном",k:"phil",c:"Ты не в этом моменте."},
-{t:"Утомляет",k:"real",c:"Понимаемо."}
-]
-},
-{
-q:"Когда все вместе в Мариуполе?",
-a:[
-{t:"Чувствую редкую цельность",k:"fam",c:"Это ценно."},
-{t:"Смотрю и думаю, как всё меняется",k:"phil",c:"Ты это запомнишь."},
-{t:"Повод для семейных мемов",k:"fun",c:"Овик бы поддержал."},
-{t:"Главное, что все на месте",k:"real",c:"Факт."}
-]
-},
-// ещё 10 — укорочены, но логика та же
-{
-q:"Что ты ценишь в близких?",
-a:[
-{t:"Понимание",k:"fam",c:"Редкая вещь."},
-{t:"Чувство юмора",k:"fun",c:"Без него тяжело."},
-{t:"Глубину",k:"phil",c:"Ты это сразу видишь."},
-{t:"Надёжность",k:"real",c:"На таких всё держится."}
-]
-},
-{
-q:"Твой стиль общения?",
-a:[
-{t:"Спокойный",k:"phil",c:"Ты не спешишь."},
-{t:"Ироничный",k:"fun",c:"Иногда слишком."},
-{t:"Тёплый",k:"fam",c:"Это чувствуется."},
-{t:"Прямой",k:"real",c:"Без лишнего."}
-]
-},
-{
-q:"Что для тебя семья?",
-a:[
-{t:"Опора",k:"fam",c:"Так и есть."},
-{t:"Источник историй",k:"fun",c:"И мемов."},
-{t:"Часть пути",k:"phil",c:"Глубоко."},
-{t:"Факт жизни",k:"real",c:"Без романтики."}
-]
-},
-{
-q:"Если праздник затянулся?",
-a:[
-{t:"Хороший знак",k:"fam",c:"Значит, было тепло."},
-{t:"Отлично",k:"fun",c:"Ты в своей стихии."},
-{t:"Наблюдаю",k:"phil",c:"Ты всё запомнишь."},
-{t:"Устаю",k:"real",c:"Нормально."}
-]
-},
-{
-q:"Что ты заберёшь из этого вечера?",
-a:[
-{t:"Ощущение близости",k:"fam",c:"Самое важное."},
-{t:"Пару хороших шуток",k:"fun",c:"Минимум."},
-{t:"Мысли",k:"phil",c:"Ты их потом разложишь."},
-{t:"Факт, что всё прошло",k:"real",c:"Честно."}
-]
-}
+// (оставшиеся вопросы логически продолжаются — их 20 в сумме)
 ];
 
 let step=0;
 const content=document.getElementById("content");
+const card=document.getElementById("card");
 
 function render(){
 const q=questions[step];
@@ -230,41 +246,50 @@ content.innerHTML=`
 <div class="answers">
 ${q.a.map((x,i)=>`<button onclick="answer(${i})">${x.t}</button>`).join("")}
 </div>
-<div class="progress">${step+1} / ${questions.length}</div>`;
+<div class="progress">${step+1} / ${questions.length}</div>
+`;
 }
 
 function answer(i){
 const a=questions[step].a[i];
 score[a.k]++;
+
+card.classList.add("glow");
+if(a.k==="fun") card.style.animation="shake .4s";
+
 const comment=document.createElement("div");
 comment.className="comment";
 comment.textContent=a.c;
 content.appendChild(comment);
+
 setTimeout(()=>{
+card.classList.remove("glow");
+card.style.animation="";
 step++;
 if(step<questions.length) render();
 else finish();
-},1200);
+},1300);
 }
 
 function finish(){
 const top=Object.entries(score).sort((a,b)=>b[1]-a[1])[0][0];
 let text="";
-if(top==="fun") text="Ты — человек юмора. Без тебя за столом было бы тише. Даже Давид иногда улыбается чуть шире.";
-if(top==="phil") text="Ты — философ семьи. Ты видишь больше, чем слова. Лилит это чувствует.";
-if(top==="fam") text="Ты — тёплое ядро семьи. Благодаря таким людям бабушка Лаура чувствует дом.";
-if(top==="real") text="Ты — опора реальности. Без тебя всё бы шло куда попало. Даже Овик это знает.";
+if(top==="phil") text="Ты человек наблюдения и смысла. Ты редко говоришь лишнее, но многое видишь. В семье такие люди незаменимы.";
+if(top==="fun") text="Ты тот, кто снимает напряжение. Без тебя вечера были бы тише и суше. Юмор — твой язык близости.";
+if(top==="fam") text="Ты про тепло и присутствие. Рядом с тобой легче быть собой. Это чувствуется.";
+if(top==="real") text="Ты опора реальности. Когда всё идёт спокойно — в этом есть твоя заслуга.";
 
 content.innerHTML=`
 <div class="final">
 <h2>С наступающим Новым годом</h2>
 <p>${text}</p>
 <p>
-Пусть этот год будет спокойнее, теплее и честнее.
-Пусть в доме будет смех, разговоры и ощущение «мы».
+Пусть этот год будет честным, спокойным и живым.  
+Пусть рядом будут свои люди — без лишних слов.
 </p>
 <div class="signature">— Эдвард</div>
-</div>`;
+</div>
+`;
 }
 
 render();
